:sparkles: Basic outbox and notes available
