# src/models/activitypub.rs
@@ -1,5 +1,6 @@
 use serde_derive::Deserialize;
 use serde_derive::Serialize;
+use serde_json::Value;
 
 #[derive(Default, Debug, Clone, PartialEq, Serialize, Deserialize)]
 #[serde(rename_all = "camelCase")]
@@ -24,7 +25,8 @@ pub struct Profile {
     pub outbox: String,
     pub preferred_username: String,
     pub public_key: PublicKey,
-    pub published: String, // creation of account (Date)
+    pub published: String,
+    // creation of account (Date)
     // pub summary: String,
     // pub tag: Vec<Tag>,
     #[serde(rename = "type")]
@@ -197,11 +199,13 @@ pub struct Tag {
 
 #[derive(Default, Debug, Clone, PartialEq, Serialize, Deserialize)]
 #[serde(rename_all = "camelCase")]
-pub struct PeopleData {
+pub struct OrderedCollection {
     #[serde(rename = "@context")]
     pub context: String,
     pub first: String,
     pub id: String,
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub last: Option<String>,
     pub total_items: i64,
     #[serde(rename = "type")]
     pub type_field: String,
@@ -230,4 +234,102 @@ pub struct FollowRequest {
     pub type_field: String,
     pub actor: String,
     pub object: String,
+}
+
+#[derive(Default, Debug, Clone, PartialEq, Serialize, Deserialize)]
+pub struct OutboxDataPage {
+    #[serde(rename = "@context")]
+    pub context: (String, OutboxContext),
+    pub id: String,
+    #[serde(rename = "type")]
+    pub type_field: String,
+    pub next: String,
+    pub prev: String,
+    pub part_of: String,
+    pub ordered_items: Vec<OrderedItem>,
+}
+
+#[derive(Default, Debug, Clone, PartialEq, Serialize, Deserialize)]
+#[serde(rename_all = "camelCase")]
+pub struct OrderedItem {
+    pub id: String,
+    #[serde(rename = "type")]
+    pub type_field: String,
+    pub actor: String,
+    pub published: String,
+    pub to: Vec<String>,
+    pub cc: Vec<String>,
+    pub object: Value,
+}
+#[derive(Default, Debug, Clone, PartialEq, Serialize, Deserialize)]
+#[serde(rename_all = "camelCase")]
+pub struct NoteBoxItemRoot {
+    pub id: String,
+    #[serde(rename = "type")]
+    pub type_field: String,
+    pub actor: String,
+    pub published: String,
+    pub to: Vec<String>,
+    pub cc: Vec<String>,
+    pub object: NoteBoxItemObject,
+}
+
+#[derive(Default, Debug, Clone, PartialEq, Serialize, Deserialize)]
+#[serde(rename_all = "camelCase")]
+pub struct NoteBoxItemObject {
+    pub id: String,
+    #[serde(rename = "type")]
+    pub type_field: String,
+    // pub summary: Value,
+    pub in_reply_to: Value,
+    pub published: String,
+    pub url: String,
+    pub attributed_to: String,
+    pub to: Vec<String>,
+    pub cc: Vec<String>,
+    // pub sensitive: bool,
+    // pub atom_uri: String,
+    // pub in_reply_to_atom_uri: Value,
+    // pub conversation: String,
+    pub content: String,
+    // pub content_map: ContentMap,
+    pub attachment: Vec<Value>,
+    pub tag: Vec<Value>,
+    pub updated: Option<String>,
+    pub replies: NoteBoxItemReplies,
+}
+
+#[derive(Default, Debug, Clone, PartialEq, Serialize, Deserialize)]
+#[serde(rename_all = "camelCase")]
+pub struct NoteBoxItemReplies {
+    pub id: String,
+    #[serde(rename = "type")]
+    pub type_field: String,
+    pub first: NoteBoxItemFirst,
+}
+
+#[derive(Default, Debug, Clone, PartialEq, Serialize, Deserialize)]
+#[serde(rename_all = "camelCase")]
+pub struct NoteBoxItemFirst {
+    #[serde(rename = "type")]
+    pub type_field: String,
+    pub next: String,
+    pub part_of: String,
+    pub items: Vec<Value>,
+}
+
+#[derive(Default, Debug, Clone, PartialEq, Serialize, Deserialize)]
+#[serde(rename_all = "camelCase")]
+pub struct OutboxContext {
+    pub ostatus: String,
+    // pub atom_uri: String,
+    // pub in_reply_to_atom_uri: String,
+    pub conversation: String,
+    // pub sensitive: String,
+    pub toot: String,
+    // pub voters_count: String,
+    #[serde(rename = "Hashtag")]
+    pub hashtag: String,
+    pub blurhash: String,
+    pub focal_point: FocalPoint,
 }
