# src/routes/api/v1/interact.rs
@@ -1,14 +1,16 @@
-use std::sync::Arc;
-use axum::{debug_handler, Extension, Json};
+use crate::helpers::auth::UserState;
+use crate::helpers::AppResult;
+use crate::prisma::{note, profile, EventAudience};
+use crate::AppState;
 use axum::body::Body;
 use axum::extract::State;
 use axum::http::StatusCode;
 use axum::response::{IntoResponse, Response};
+use axum::{debug_handler, Extension, Json};
+use serde::Serialize;
 use serde_derive::Deserialize;
-use crate::AppState;
-use crate::helpers::AppResult;
-use crate::helpers::auth::UserState;
-use crate::prisma::{EventAudience, note, profile};
+use std::any::Any;
+use std::sync::Arc;
 
 #[derive(Deserialize)]
 pub struct PostNoteInput {
@@ -29,22 +31,47 @@ pub async fn post_note(
     for mention in input.mentions {
         mentions_vec.push(profile::server_id::equals(mention));
     }
+    let note = match state
+        .db
+        .note()
+        .create(
+            input.content,
+            input.audience,
+            profile::id::equals(claims.profile_id.to_string()),
+            vec![
+                note::hashtags::set(input.hashtags),
+                note::mentions::connect(mentions_vec),
+            ],
+        )
+        .exec()
+        .await
+    {
+        Ok(d) => d,
+        Err(e) => {
+            println!("{:?}", e);
+            return Ok(Response::builder()
+                .status(StatusCode::PRECONDITION_FAILED)
+                .body(Body::from(""))
+                .unwrap());
+        }
+    };
+    let server_id = format!(
+        "{}/api/v1/notes/{}/{}",
+        state.env.public_url, claims.username, &note.id
+    );
 
-
-    let note = state.db.note().create(
-        input.content,
-        input.audience,
-        profile::id::equals(claims.sub.to_string()),
-        vec![
-            note::hashtags::set(input.hashtags),
-            note::mentions::connect(mentions_vec),
-        ],
-    ).exec().await.unwrap();
-    let server_id = format!("{}/api/v1/notes/{}/{}", state.env.public_url, claims.username, &note.id);
-
-    state.db.note().update(note::id::equals(note.id), vec![note::server_id::set(Some(server_id))]).exec().await.unwrap();
+    state
+        .db
+        .note()
+        .update(
+            note::id::equals(note.id),
+            vec![note::server_id::set(Some(server_id))],
+        )
+        .exec()
+        .await
+        .unwrap();
     Ok(Response::builder()
-        .status(StatusCode::BAD_REQUEST)
+        .status(StatusCode::OK)
         .body(Body::from(""))
         .unwrap())
 }
