# src/routes/api/v1/mod.rs
@@ -1,4 +1,4 @@
 pub mod auth;
+pub mod interact;
 pub mod manage;
 pub mod user;
-pub mod interact;
